# lib/api-spec/openapi.yaml
@@ -495,6 +495,9 @@ components:
         physicalOther:
           type: string
           nullable: true
+        shape:
+          type: string
+          nullable: true
         imageUrl:
           type: string
           nullable: true
@@ -660,6 +663,9 @@ components:
           type: string
           nullable: true
         physicalOther:
+          type: string
+          nullable: true
+        shape:
           type: string
           nullable: true
         imageUrl:
